# WindowSimpleTaskManager

./: CMakeLists.txt  README.md  ReadWindowCpuUsage.cpp  SystemInfoReader.h  build.bat  conanfile.py  main.cpp
